docs: add docs for category
